# matrix2txt-examples

./: README.md
matrix2txt/: CMakeLists.txt  test.cpp
txt2matrix/: CMakeLists.txt  test.cpp
